--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,6 @@ set -g message-attr bright
 
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-utf8 on
 set -g status-interval 60
 set -g status-justify centre
@@ -72,3 +71,5 @@ bind -t vi-copy 'y' copy-selection
 
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+set -g default-terminal "screen-256color"
