--- a/tmux.conf
+++ b/tmux.conf
@@ -44,8 +44,8 @@ setw -g window-status-current-attr bright
 
 set -g pane-border-fg green
 set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+set -g pane-active-border-fg yellow
+set -g pane-active-border-bg black
 
 set -g message-fg white
 set -g message-bg black
@@ -73,3 +73,5 @@ bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 set -g default-terminal "screen-256color"
+
+set -g default-shell /usr/bin/fish
