update tmux history and disable syntastic

--- a/tmux.conf
+++ b/tmux.conf
@@ -73,3 +73,6 @@ bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 set -g default-terminal "screen-256color"
+
+set -g default-shell /usr/bin/fish 
+set -g history-limit 100000
