--- a/tmux.conf
+++ b/tmux.conf
@@ -6,10 +6,10 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf
 bind C-a send-prefix
 
-bind | split-window -h
-bind v split-window -h
-bind - split-window -v
-bind s split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 
 bind S choose-session
 
