make new windows be in the same dir

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,8 @@ bind v split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 
+bind c new-window -c "#{pane_current_path}"
+
 bind S choose-session
 
 bind h select-pane -L
