--- a/tmux.conf
+++ b/tmux.conf
@@ -76,7 +76,7 @@ bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 set -g default-terminal "screen-256color"
 
-set -g default-shell /usr/bin/fish 
+set -g default-shell /usr/local/bin/fish 
 set -g history-limit 100000
 
 # Toggle mouse on with ^B m
