update from work for 2016

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,12 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf
 bind C-a send-prefix
 
-bind | split-window -h -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-bind s split-window -v -c "#{pane_current_path}"
+bind | split-window -h
+bind v split-window -h
+bind - split-window -v
+bind s split-window -v
 
-bind c new-window -c "#{pane_current_path}"
+bind c new-window
 
 bind S choose-session
 
