--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,12 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf
 bind C-a send-prefix
 
-bind | split-window -h
-bind v split-window -h
-bind - split-window -v
-bind s split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 
-bind c new-window
+bind c new-window -c "#{pane_current_path}"
 
 bind S choose-session
 
@@ -28,10 +28,7 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+setw -g mouse on
 
 set -g status-fg white
 set -g status-bg black
@@ -55,7 +52,6 @@ set -g message-attr bright
 
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-utf8 on
 set -g status-interval 60
 set -g status-justify centre
 
@@ -76,7 +72,7 @@ bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 set -g default-terminal "screen-256color"
 
-set -g default-shell /usr/local/bin/fish 
+set -g default-shell /usr/bin/fish 
 set -g history-limit 100000
 
 # Toggle mouse on with ^B m
